WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303371
SourceBufferParserAVFObjC can't be instantiated in the WebContent process on iOS devices.
https://bugs.webkit.org/show_bug.cgi?id=303371
Summary
SourceBufferParserAVFObjC can't be instantiated in the WebContent process on ...
Jean-Yves Avenard [:jya]
Reported
2025-12-02 01:01:27 PST
rdar://165598587
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-12-02 01:07:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54684
EWS
Comment 2
2025-12-02 03:27:40 PST
Committed
303746@main
(3e2d44bf98ad): <
https://commits.webkit.org/303746@main
> Reviewed commits have been landed. Closing PR #54684 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug