SourceBufferParserAVFObjC can't be used in the WebContent process on iOS devices. https://bugs.webkit.org/show_bug.cgi?id=303371 rdar://165598587

Reviewed by Youenn Fablet.

SourceBufferParserAVFObjC couldn't be used when MediaSourceUseRemoteAudioVideoRenderer
is set to true.

Manually tested on iPad. mediaparserd daemon isn't used in any of the devices used by testing infrastructure.
* Source/WebCore/Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::createSourceBufferPrivate):
* Source/WebCore/platform/graphics/MediaSourceConfiguration.h:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferParserAVFObjC.mm:
(WebCore::SourceBufferParserAVFObjC::SourceBufferParserAVFObjC):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/303746@main